stats around % autoresponded and %autoresponded correctly visibile in manager

--- a/app/assets/stylesheets/feeds.css.scss
+++ b/app/assets/stylesheets/feeds.css.scss
@@ -1243,6 +1243,11 @@ body {
 						background:#efefef;
 						padding-left: 25px;
 					}
+
+					.graph {
+						margin: 1px;
+						background: white;
+					}
 				}
 			}
 		}
